--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3"
 	},
     "autoload": {
-        "psr-4": { "dynxgit\\Yii2-Usermanager\\*": "" }
+        "psr-4": { "dynx\\Yii2-Usermanager\\*": "" }
     }
 
 }
