--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "git@dynx.hu"
         }
     ],
-
+    "stability":"stable",
 	"require":{
 		"php": ">=7.0.0",
         "yiisoft/yii2": "~2.0.14",
