--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "dynxgit/yii2-usermanager",
 	"description": "User manager for Yii2 with extended RBAC",
 	"type": "project",
-    "license": "proprietary",
+    "license": "BSD-3-Clause",
     "minimum-stability": "stable",
 	"authors": [
         {
@@ -17,7 +17,7 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3"
 	},
     "autoload": {
-        "psr-4": { "dynx\\yii2-usermanager\\": "*" }
+        "psr-4": { "dynxgit\\yii2-usermanager\\": "*" }
     }
 
 }
