--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3"
 	},
     "autoload": {
-        "psr-4": { "dynxgit\\yii2-usermanager\\": "*" }
+        "psr-4": { 
+            "dynxgit\\yii2-usermanager\\": "*" 
+        }
     }
 
 }
